--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,42 @@
-/* Empty. Add your own CSS if you like */
+/**//* Empty. Add your own CSS if you like */
+
+#debug{
+    margin:2%;
+    width:98%;
+
+    position:absolute;
+    left:0px;
+    top:0px;
+
+    display:none;
+
+    color:#F00;
+}
+
+.imgleft,.imgright{
+    width:50%;
+    height:100%;
+    overflow:hidden;
+    position:relative;
+    margin:0;
+    padding:0;
+    float:left;
+}
+
+
+.rotationWrapper{
+    width:100%;
+    height:100%;
+
+}
+
+.translationWrapper{
+    width:700%;
+    top:-200px;
+    left:0px;
+}
+
+.translationWrapper img{
+    width:50%;
+    float:left;
+}
