Revert "Added templates and vr"
This reverts commit ff17f6841b71833502f5c5ecfb423ea89ba2f0d2.

--- a/www/templates/projects.html
+++ b/www/templates/projects.html
@@ -8,11 +8,11 @@
         </label>
 
         <button class="button button-positive">
-          <i class="icon ion-ios-new" ng-click=add("code")></i>
+         <i class="icon ion-ios-new"></i>
         </button>
 
 
-        <ion-item ng-repeat="project in projects" href="#/projects/{{project.id}}">{{project.title}}</ion-item>
+        <ion-item ng-repeat="project in projects">{{project.title}}</ion-item>
 
       </ion-list>
 
