--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -18,6 +18,49 @@ $dark:                            #444 !default;
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
+
+#debug{
+    margin:2%;
+    width:98%;
+
+    position:absolute;
+    left:0px;
+    top:0px;
+
+    display:none;
+
+    color:#F00;
+}
+
+.imgleft,.imgright{
+    width:50%;
+    height:100%;
+    overflow:hidden;
+    position:relative;
+    margin:0;
+    padding:0;
+    float:left;
+}
+
+
+.rotationWrapper{
+    width:100%;
+    height:100%;
+
+}
+
+.translationWrapper{
+    width:700%;
+    top:-200px;
+    left:0px;
+}
+
+.translationWrapper img{
+    width:50%;
+    float:left;
+}
+
+
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 
