--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -19,15 +19,19 @@ $dark:                            #444 !default;
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 
+canvas{
+    width:100%;
+    height:100%;
+}
+
 #debug{
     margin:2%;
     width:98%;
-
     position:absolute;
+
     left:0px;
     top:0px;
 
-    display:none;
 
     color:#F00;
 }
