Fixed rotation conversion
fixed rotation conversion problem by implementing the device
orientation controller library

--- a/www/templates/vrviewer.html
+++ b/www/templates/vrviewer.html
@@ -1,8 +1,9 @@
 <ion-view hide-nav-bar="true" ng-init="init()">
 
 	<ion-content class="content" href="#/projects" >
+		<!-- The simulator gets dynamicly loaded in the Simulator factory -->
 		
-
+		<div class="debug">Orientation event not supported</div>
 	</ion-content>
 
 </ion-view>
