--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -22,48 +22,20 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 canvas{
     width:100%;
     height:100%;
+
 }
 
-#debug{
+.debug{
     margin:2%;
     width:98%;
-    position:absolute;
+    position:fixed;
 
     left:0px;
     top:0px;
 
-
+    z-index:99;
     color:#F00;
 }
-
-.imgleft,.imgright{
-    width:50%;
-    height:100%;
-    overflow:hidden;
-    position:relative;
-    margin:0;
-    padding:0;
-    float:left;
-}
-
-
-.rotationWrapper{
-    width:100%;
-    height:100%;
-
-}
-
-.translationWrapper{
-    width:700%;
-    top:-200px;
-    left:0px;
-}
-
-.translationWrapper img{
-    width:50%;
-    float:left;
-}
-
 
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
