--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -19,6 +19,17 @@ canvas {
   width: 100%;
   height: 100%; }
 
+.noscroll {
+  overflow: hidden; }
+
+.gestureRecognizer {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  z-index: 99;
+  width: 100%;
+  height: 100%; }
+
 .debug {
   margin: 2%;
   width: 98%;
