--- a/www/templates/vrviewer.html
+++ b/www/templates/vrviewer.html
@@ -1,9 +1,12 @@
 <ion-view hide-nav-bar="true" ng-init="init()">
 
-	<ion-content class="content" href="#/projects" >
+	<ion-content scroll="false">
+
+		<div class="gestureRecognizer" detect-gestures gesture-type="doubletap"></div>
+
+		<div class="simulator">
 		<!-- The simulator gets dynamicly loaded in the Simulator factory -->
-		
-		<div class="debug">Orientation event not supported</div>
+		</div>
 	</ion-content>
 
 </ion-view>
