--- a/www/templates/projects.html
+++ b/www/templates/projects.html
@@ -1,18 +1,19 @@
   
-<ion-view title="Projects" ng-init="init()">
+<ion-view title="Architry" ng-init="init()">
   <ion-content>
-
       <ion-list>
-        <label class="item item-input">
-          <input type="text" placeholder="Add project">
-        </label>
+      <hr>
+      <h2 >Projects</h2>
 
-        <button class="button button-positive">
-          <i class="icon ion-ios-new" ng-click=add("code")></i>
+      <h4 class="add">Add project:</h4>
+        <label class="item1 addproject item-energized item-input">
+          <input type="text" class="submitCode" placeholder="Submit project code"><button class="button  button-energized">
+          <i class="icon ion-ios-new" ng-click=add("code")>Add</i>
         </button>
+        </label>
+   
 
-
-        <ion-item ng-repeat="project in projects" href="#/projects/{{project.id}}">{{project.title}}</ion-item>
+        <ion-item ng-repeat="project in projects" class="projects" href="#/projects/{{project.id}}"><div class="titleProject"><h3>{{project.title}}<h3></div><div class ="projectphoto"><img src="{{project. tumbnail}}"></div><div class="descriptionProject"><p>{{project.description}}</p></div> </ion-item>
 
       </ion-list>
 
