Added mysql connection and changed vr image

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -25,6 +25,13 @@ canvas{
 
 }
 
+.overlay{
+	text-align:center;
+	top:20%;
+	display:block;
+	width:100%;
+	position:absolute;
+}
 
 .noscroll{
 	overflow:hidden;
