--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -19,6 +19,13 @@ canvas {
   width: 100%;
   height: 100%; }
 
+.overlay {
+  text-align: center;
+  top: 20%;
+  display: block;
+  width: 100%;
+  position: absolute; }
+
 .noscroll {
   overflow: hidden; }
 
