--- a/www/templates/projects.html
+++ b/www/templates/projects.html
@@ -3,13 +3,18 @@
   <ion-content>
 
       <ion-list>
-        <label class="item item-input">
-          <input type="text" placeholder="Add project">
-        </label>
 
-        <button class="button button-positive">
-          <i class="icon ion-ios-new" ng-click=add("code")></i>
-        </button>
+         <form ng-submit="addProject(projectCode)">
+
+          <label class="item item-input">
+            <input type="text" placeholder="Add project" ng-model="projectCode">
+          </label>
+        
+          <button type="submit" class="button button-positive">
+            <i class="icon ion-ios-new"></i>
+          </button>
+
+        </form>
 
 
         <ion-item ng-repeat="project in projects" href="#/projects/{{project.id}}">{{project.title}}</ion-item>
