--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -56,12 +56,15 @@ h4.add{
 }
 
 p{
-      letter-spacing: 1.5px !important;
+      letter-spacing: 2.5px !important;
+      font-weight: 200 !important;
       }
-
+p.ng-binding {
+  margin-top: 0 !important;
+}
 hr{
     margin-top: -2px;
-    width: 40%;
+    width: 20%;
 
 }
 
@@ -118,9 +121,14 @@ ion-nav-bar .title {
     margin:0 auto;
 }
 
+.wrapping-list .item-content, .wrapping-list .item {
+    overflow: initial;
+    white-space: initial;
+}
+
 .descriptionProject{
-  background-color: #869898;
-  padding: 15px 10px;
+  background-color: #869898 !important;
+margin-top:2px;
 }
 .descriptionProject p{
 color:white !important;
