--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -7,10 +7,10 @@ For example, you might change some of the default colors:
 
 $light:                           #fff !default;
 $stable:                          #f8f8f8 !default;
-$positive:                        #387ef5 !default;
+// $positive:                        #387ef5 !default;
 $calm:                            #11c1f3 !default;
 $balanced:                        #33cd5f !default;
-$energized:                       #869898 !default;
+$energized:                       #869898 !default; // DE BLAUWE BG 
 $assertive:                       #ef473a !default;
 $royal:                           #886aea !default;
 $dark:                            #444 !default;
@@ -18,7 +18,7 @@ $dark:                            #444 !default;
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 // $stable:                          #869898 !default;
-
+$positive:                        #FFF !default;
 
 canvas{
     width:100%;
@@ -26,38 +26,47 @@ canvas{
 
 }
 
-@font-face {
-    font-family: "Lovelo";
-    src:  url('../www/fonts/opensans-regular-webfont.ttf') format('truetype');
+@font-face {    font-family: "Lovelo";
+    src:  url('./fonts/Lovelo_Black.ttf') format('truetype');
    
 }
 
-h1, h3, h4 {
+img{
+  max-width: 100%;
+}
+
+h1, h3, h5 {
   font-family: "Lovelo" !important;
   letter-spacing: 1.5px;
    }
 
 h2{
-    font-size: 24px !important;
+    font-size: 18px !important;
   letter-spacing: 3px !important;
    font-weight: 200 !important;
    border-top: 2px solid;
-}
-   h2{
     color:white !important;
     text-align: center !important;
-    padding: 0 0 0 10px;
     margin-top: 0px !important;
    }
-h4.add{
-  padding-left: 8%;
-  font-size: 12px;
-  margin-bottom: 6px !important;
+
+h3{
+  font-size: 22px !important;
+  color:#25272C !important;
+}
+
+h4{
+font-size:14px !important;
+margin-bottom:3px !important;
+color:#25272C !important;
+margin-top:0 !important;
+   font-weight: 600 !important;
 }
 
 p{
       letter-spacing: 2.5px !important;
       font-weight: 200 !important;
+      font-size: 14px !important;
       }
 p.ng-binding {
   margin-top: 0 !important;
@@ -65,6 +74,11 @@ p.ng-binding {
 hr{
     margin-top: -2px;
     width: 20%;
+
+}
+
+.logo {
+  width: 50%;
 
 }
 
@@ -87,28 +101,46 @@ ion-nav-bar .title {
     text-align: center !important;
  font-family: "Lovelo" !important;
     font-size: 28px !important;
-    letter-spacing: 0.2 !important;
+    letter-spacing: 3px !important;
     color: white;
+    border:none;
 
+}
+
+ion-nav-bar .title img{
+  width: 60%;
+}
+
+.bar-subheader{
+    background-color: #869898 !important;
+}
+.bar-subheader1 {
+  top: 40px !important;
+  display: block !important;
+  height: 115px !important;
+  background-color: #869898 !important;
+}
+
+.has-subheader1 {
+  top: 155px !important;
 }
 
 .item-content p {
     overflow: none !important;
-    
-  /* overflow: hidden; */
-  /* text-overflow: ellipsis; */
-  /* white-space: nowrap; */
-}
+ }
 
 .addproject{
-  width: 90% !important;
+  width: 94% !important;
     border-color: #F4F5F5 !important;
-  margin: 0px 5% 7px 5% !important;
+  margin: 0px 5% 7px 1% !important;
+}h4.add{
+  padding-left: 3%;
+    margin-bottom: 6px !important;
 
 }
 
 .item1{
-    padding: 0px 0px 0 10px !important;
+    padding: 0px 0px 0 3% !important;
     border: 1px solid white;
 }
 
@@ -118,7 +150,7 @@ ion-nav-bar .title {
 
 .projectphoto{
     width: 100% !important;
-    margin:0 auto;
+    margin:3px auto;
 }
 
 .wrapping-list .item-content, .wrapping-list .item {
@@ -130,18 +162,23 @@ ion-nav-bar .title {
   background-color: #869898 !important;
 margin-top:2px;
 }
+
 .descriptionProject p{
 color:white !important;
-
+font-size:12px !important;
+line-height:1.2 !important;
+letter-spacing:2px !important;
 }
 
 
 .item-content {
-  width: 90% !important;
-  padding: 10px 0 !important;
-  margin: 0 5%;
+  width: 100% !important;
+  padding: 10px 1% !important;
 }
 
+.item-body {
+  padding: 10px !important;
+}
 
 .projectphoto img{
     max-width: 100%;
@@ -149,27 +186,79 @@ color:white !important;
 
 .submitCode::-webkit-input-placeholder{
   color:    white;
-  letter-spacing: 1.5px !important;
+  font-weight: 200;
+  color:white !important;
+font-size:12px !important;
+line-height:1.2 !important;
+letter-spacing:2px !important;
 }
 
 
-
-.list{
-    background-color: #869898 !important;
-}
-
-// .debug{
-//     margin:2%;
-//     width:98%;
-//     position:fixed;
-
-//     left:0px;
-//     top:0px;
-
-//     z-index:99;
-//     color:#F00;
-// }
 
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 
+///------------------------------------------project-details----------------------//////////
+.viewButton {
+  width: 100% !important;
+  border: solid #FFFFFF 1px !important;
+  text-align: center !important;
+  color: #FFFFFF !important;
+  letter-spacing: 2px;
+  font-weight: 200;
+  margin-top: 10px;
+  border-bottom: 1!important;
+}
+
+.viewBT .button-outline{
+    width: 65% !important;
+  margin-left: 2% !important;
+    width: 65% !important;
+  margin-left: 2% !important;
+}
+
+.kaartje{
+  height: 200px;
+  background-color: rgb(240, 221, 221);
+  width: 100%;
+  margin:10px auto;
+
+}
+
+img.thumbnail {
+  width: 30%;
+  float: left;
+  margin-left: 2%;
+}
+
+.rightDescription {
+  margin: 0 30%;
+  width: 68%;
+  padding-top: 0px !important;
+
+p {
+    margin: 0;
+    color: white;
+  }
+}
+
+
+.topheader{
+  position:fixed;
+}
+
+.eye{
+  width: 50%;
+  float: left;
+}
+
+.itemView > .item-content{
+   background-color: #44474a !important;
+   margin-bottom: 5px;
+}
+
+.test{
+  border: solid 1px #44474a;
+  height: 200px;
+  width: 200px;
+}
